PLT-6311 - Link text wrapping fix (#6079)

--- a/webapp/sass/layout/_markdown.scss
+++ b/webapp/sass/layout/_markdown.scss
@@ -1,7 +1,6 @@
 @charset 'UTF-8';
 
 .markdown__link {
-    word-break: break-all;
 }
 
 .markdown__heading {
